src/chrome/komodo/skin/plat/shared/icons_rules.less
/* Icon Tweaks */
treechildren::-moz-tree-image(project-icon),
#placesSubpanelProjectsTreechildren_SPV::-moz-tree-image
{
    margin-right: 5px;
}

/* Icon Values */

treechildren::-moz-tree-image(project-icon),
.project-icon
{
    list-style-image: @icon-project;
}

/* GLOBAL */
button[type="moreinfo"] > .button-box > .button-icon
{
    margin-right: 0px;
    margin-left: 2px;
}

button, toolbarbutton, menuitem
{
    &[class$='-icon'], [class$='-icon'],
    &[class$='_icon'], [class$='_icon']
    {
        &[disabled="true"] > image
        {
            opacity: 0.6;
        }
    }
}

/* Allow the icons in menus to determine for themselves what height they require */
.menu-iconic-icon
{
    height: auto;
}

/* Enforce 16px height for checked menuitem's as they use background-image
 * instead of list-style-image, which requires fixed dimensions */
:not(menulist) > menupopup > :-moz-any(menuitem[selected="true"], menuitem[checked="true"]) > .menu-iconic-left .menu-iconic-icon
{
    height: 16px;
}

/* Check / Radio items */

menuitem[type="checkbox"]
{
    & > .menu-iconic-left
    {
        background-image: @icon-checkbox;
        background-repeat: no-repeat;
        background-position: center;
    }

    &[checked="true"] > .menu-iconic-left
    {
        background-image: @icon-checkbox-checked;
    }
}

menuitem.languageicon[type="checkbox"] > .menu-iconic-left
{
    background-position: top left !important;
}

menuitem[type="radio"]
{
    & > .menu-iconic-left
    {
        background-image: @icon-radio;
        background-repeat: no-repeat;
        background-position: top left;
    }

    &[checked="true"] > .menu-iconic-left,
    &[selected="true"] > .menu-iconic-left
    {
        background-image: @icon-radio-selected;
    }
}

/* Tree Checkboxes */

/* Small */

treechildren::-moz-tree-image(col-checkbox)
{
    list-style-image: @icon-checkbox-small;
    opacity: 0.4;
    -moz-appearance: none;
    width: 16px;
    height: 16px;
}

treechildren::-moz-tree-image(col-checkbox, checked)
{
    list-style-image: @icon-checkbox-small-checked;
}

treechildren::-moz-tree-image(col-checkbox, parent-checked),
treechildren::-moz-tree-image(col-checkbox, no-parent)
{
    opacity: 1.0;
}

treechildren::-moz-tree-image(col-checkbox, checked, parent-checked),
treechildren::-moz-tree-image(col-checkbox, checked, no-parent)
{
    list-style-image: @icon-checkbox-small-checked;
}

/* Regular */

treechildren::-moz-tree-checkbox
{
    list-style-image: @icon-checkbox !important;
}

treechildren::-moz-tree-checkbox(checked)
{
    list-style-image: @icon-checkbox-checked !important;
}

treechildren::-moz-tree-checkbox(nocheckbox),
treechildren::-moz-tree-checkbox(sccLoading),
treechildren::-moz-tree-checkbox(sccError),
treechildren::-moz-tree-checkbox(syncLoading),
treechildren::-moz-tree-checkbox(syncError)
{
    list-style-image: none !important;
}

/* Menu Icons */

menu .menu-right
{
    list-style-image: @icon-menu-arrow;
}

/* Folder Icons */

.upfolder-icon
{
    list-style-image: @icon-folder-up;
}

.newfolder-icon
{
    list-style-image: @icon-newfolder;
}

menulist dropmarker, textbox[type="autocomplete"] dropmarker
{
    list-style-image: @icon-dropmarker;
    width: 16px;
}

/* General Icons */

.refresh-icon
{
    list-style-image: @icon-refresh;
}

.goback-icon
{
    list-style-image: @icon-goback;
}

.warning-icon
{
    list-style-image: @icon-warning;
}

.small-warning-icon
{
    list-style-image: @icon-small-warning;
    min-height: 16px;
}

.question-icon
{
    list-style-image: @icon-question;
}

.native-help-icon,
.help-icon
{
    list-style-image: @icon-help;
}

menu .help-icon, menuitem .help-icon
{
    list-style-image: @icon-menu-help;
}

.double-down-icon,
.more-icon
{
    list-style-image: @icon-more;
}

.double-up-icon,
.less-icon
{
    list-style-image: @icon-less;
}

.arrow-right-small-icon
{
    list-style-image: none;

    image
    {
        background-image: @icon-arrow-right-small;
        background-position: center;
        width: 8px;
        height: 8px;
    }
}

.project-icon
{
    list-style-image: @icon-project;
}

.server-pref-icon
{
    list-style-image: @icon-server-pref;
}

.preview-icon
{
    list-style-image: @icon-preview;
}

.refreshFile-icon
{
    list-style-image: @icon-refreshFile;
}

.configure-icon
{
    list-style-image: @icon-configure;
}

.properties-icon
{
    list-style-image: @icon-properties;
}

.clear-text-icon
{
    list-style-image: @icon-clear-text;
}

.bulletlist-icon
{
    list-style-image: @icon-bulletlist;
}

.bulletlist-icon[disabled="true"]
{
    list-style-image: @icon-bulletlist-disabled;
}

.scrollright-arrow-mini-icon
{
    list-style-image: @icon-scrollright-arrow-mini;
}

.scroll-arrow-right-icon
{
    list-style-image: @icon-scroll-arrow-right;
}

.scroll-arrow-right-icon:hover
{
    list-style-image: @icon-scroll-arrow-right-hover;
}

.scroll-arrow-right-icon[disabled="true"],
.scroll-arrow-right-icon[disabled="true"]:hover,
.scroll-arrow-right-icon[disabled="true"]:hover:active
{
    list-style-image: @icon-scroll-arrow-right-disabled;
}

.scroll-arrow-left-icon
{
    list-style-image: @icon-scroll-arrow-left;
}

.scroll-arrow-left-icon:hover
{
    list-style-image: @icon-scroll-arrow-left-hover;
}

.scroll-arrow-left-icon[disabled="true"],
.scroll-arrow-left-icon[disabled="true"]:hover,
.scroll-arrow-left-icon[disabled="true"]:hover:active
{
    list-style-image: @icon-scroll-arrow-left-disabled;
}

.colorbg-icon
{
    list-style-image: @icon-colorbg;
}

.boldtext-icon
{
    list-style-image: @icon-boldtext;
}

.boldtext-icon[disabled="true"]
{
    list-style-image: @icon-boldtext-disabled;
}

.italictext-icon
{
    list-style-image: @icon-italictext;
}

.italictext-icon[disabled="true"]
{
    list-style-image: @icon-italictext-disabled;
}

.find-stop-icon
{
    list-style-image: @icon-find-stop;
}

.find-stop-icon[disabled="true"]
{
    list-style-image: @icon-find-stop-disabled;
}
/* ... */

